--- a/bootstrap.html
+++ b/bootstrap.html
@@ -101,10 +101,10 @@
     <section>
         <button class="btn btn-success">Mi boton en bootstrap</button>
     </section>
-    <section class="bg-danger py-5 text-center">
-        <div class="row">
-            <div class="col-6 border">
-                <div class="card" style="width: 18rem;">
+    <section class="bg-danger py-5 text-center container">
+        <div class="d-flex justify-content-around">
+            <!-- <div class="col-md-6 border"> -->
+            <div class="card" style="width: 18rem;">
                 <img src="./img/pollo-1.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -114,10 +114,10 @@
                     </p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
+            <!-- </div> -->
             </div>
-            </div>
-            <div class="col-6 border">
-                <div class="card" style="width: 18rem;">
+            <!-- <div class="col-md-6 border"> -->
+            <div class="card" style="width: 18rem;">
                 <img src="./img/pollo-2.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -127,7 +127,7 @@
                     </p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
-            </div>
+            <!-- </div> -->
             </div>
         </div>
     </section>
